image-overflow fixed

--- a/main.css
+++ b/main.css
@@ -408,7 +408,6 @@ footer span {
     }
 
     .description {
-        max-height: 480px;
         margin-top: 30px;
         padding: 0px 165px;
         display: flex;
